// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-modal> Component basic usage 1`] = `

<bolt-modal>
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal persistent: false 1`] = `

<bolt-modal>
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal persistent: true 1`] = `

<bolt-modal persistent>
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal scroll: container 1`] = `

<bolt-modal scroll="container">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal scroll: overall 1`] = `

<bolt-modal scroll="overall">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal spacing: large 1`] = `

<bolt-modal spacing="large">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal spacing: medium 1`] = `

<bolt-modal spacing="medium">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal spacing: none 1`] = `

<bolt-modal spacing="none">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal spacing: small 1`] = `

<bolt-modal spacing="small">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal theme: dark 1`] = `

<bolt-modal theme="dark">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal theme: light 1`] = `

<bolt-modal theme="light">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal theme: none 1`] = `

<bolt-modal theme="none">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal theme: xdark 1`] = `

<bolt-modal theme="xdark">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal theme: xlight 1`] = `

<bolt-modal theme="xlight">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal width: auto 1`] = `

<bolt-modal width="auto">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal width: full 1`] = `

<bolt-modal width="full">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal width: optimal 1`] = `

<bolt-modal width="optimal">
  This is a modal
</bolt-modal>

`;

exports[`<bolt-modal> Component modal width: regular 1`] = `

<bolt-modal width="regular">
  This is a modal
</bolt-modal>

`;
